syntax = "proto3";

import "./entity.proto";

package grabber;

service SpecialityService {
    rpc GetSpeciality (GetEntityRequest) returns (ListSpecialitiesResponse) {}
    rpc ListSpecialities (ListSpecialitiesRequest) returns (ListSpecialitiesResponse) {}
    rpc ListFacultySpecialities (ListFacultySpecialitiesRequest) returns (ListSpecialitiesResponse) {}
}

message Speciality {
    int32 id = 1;
    string shortName = 2;
    string name = 3;
    string code = 4;
    string qualification = 5;
    int32 division_id = 6;
    string division = 7;
    int32 faculty_id = 8;
    string faculty = 9;
}

message SpecialityRelationship {
    Speciality data = 1;
}

message ListSpecialitiesRequest {
    string academy_id = 1;
    int32 page = 2;
}

message ListFacultySpecialitiesRequest {
    string academy_id = 1;
    int32 faculty_id = 2;
    int32 page = 3;
}

message ListSpecialitiesResponse {
    repeated Speciality data = 1;
    Meta meta = 2;
}
